overflow correction continued

--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,7 @@ pre code {
 .pre-scrollable {
   max-height: 340px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .container {
